Fixed the WebButton alignment in Firefox. (RM-7510)

--- a/Remotion/Web/Core/Res/Themes/NovaGray/HTML/WebButton.css
+++ b/Remotion/Web/Core/Res/Themes/NovaGray/HTML/WebButton.css
@@ -96,3 +96,11 @@ button.webButton[disabled] span.buttonBody img
   filter: progid:DXImageTransform.Microsoft.BasicImage(opacity=0.40),
           progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
 }
+
+.mozilla button.webButton span.buttonBody
+{
+  left: 0;
+  width: unset;
+  padding-left: 3px;
+  padding-right: 3px;
+}
